{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 17,
  "lineage": "ce36098e-b0eb-7a4b-63f1-c15286baec01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919968175691:internet-gateway/igw-0815b71c7128e926c",
            "id": "igw-0815b71c7128e926c",
            "owner_id": "919968175691",
            "region": "ap-south-1",
            "vpc_id": "vpc-03357134d00d975f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0815b71c7128e926c",
            "id": "r-rtb-0daf3fe7773f72e241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0daf3fe7773f72e24",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919968175691",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0daf3fe7773f72e24"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919968175691:route-table/rtb-0daf3fe7773f72e24",
            "id": "rtb-0daf3fe7773f72e24",
            "owner_id": "919968175691",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03357134d00d975f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919968175691",
            "id": "rtb-0daf3fe7773f72e24",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a8efbeb58ddb5a5",
            "region": "ap-south-1",
            "route_table_id": "rtb-0daf3fe7773f72e24",
            "subnet_id": "subnet-0b178d05c6c791321"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919968175691",
            "id": "rtbassoc-00a8efbeb58ddb5a5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077e7f1c85b29cf1b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0daf3fe7773f72e24",
            "subnet_id": "subnet-0092072eaad3d9912"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919968175691",
            "id": "rtbassoc-077e7f1c85b29cf1b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919968175691:subnet/subnet-0b178d05c6c791321",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b178d05c6c791321",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "919968175691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "kubernetes.io/cluster/eks-clean-cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-clean-cluster": "shared"
            },
            "vpc_id": "vpc-03357134d00d975f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919968175691",
            "id": "subnet-0b178d05c6c791321",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919968175691:subnet/subnet-0092072eaad3d9912",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0092072eaad3d9912",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "919968175691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "kubernetes.io/cluster/eks-clean-cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/eks-clean-cluster": "shared"
            },
            "vpc_id": "vpc-03357134d00d975f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919968175691",
            "id": "subnet-0092072eaad3d9912",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919968175691:vpc/vpc-03357134d00d975f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0764d0a222f338c37",
            "default_route_table_id": "rtb-00989964875941083",
            "default_security_group_id": "sg-0e84540627dffcc94",
            "dhcp_options_id": "dopt-02e2db9fbe853793e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03357134d00d975f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00989964875941083",
            "owner_id": "919968175691",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919968175691",
            "id": "vpc-03357134d00d975f1",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}